# adaptive-coach

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  HABILIDAD_ANALISIS_ENTRENAMIENTOS_COROS.md  Makefile  README.md  pyproject.toml
app/: __init__.py
app/api/: __init__.py  main.py  schemas.py  use_cases.py
app/coach/: __init__.py  llm_coach.py  llm_models.py  llm_provider.py  shadow_coach.py  shadow_models.py
app/domain/: __init__.py  activity.py  athlete.py  enums.py  feedback.py  fitness.py  load.py  recovery.py  workout.py
app/engines/: __init__.py  activity_analysis.py  adaptation.py  adaptation_models.py  analysis_models.py  athlete_state.py  safety.py  safety_models.py  state_models.py
app/integrations/coros/: __init__.py  contracts.py  dto.py  mappers.py
tests/: __init__.py  test_smoke.py
tests/api/: test_main.py
tests/coach/: __init__.py  test_llm_coach.py  test_shadow_coach.py
tests/domain/: __init__.py  test_activity.py  test_athlete.py  test_feedback.py  test_load.py  test_recovery.py  test_workout.py
tests/engines/: __init__.py  test_activity_analysis.py  test_adaptation.py  test_athlete_state.py  test_safety.py
tests/integrations/: __init__.py
tests/integrations/coros/: __init__.py  test_mappers.py
